# noxus-client-sdk

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: lint.yaml
examples/: agent.py  builder.py  example.py  update.py
notebook/: notebook_kb_test.txt  sdk_noxus.ipynb
noxus_sdk/: client.py  models.py
noxus_sdk/resources/: __init__.py  admin.py  agentflows.py  assistants.py  base.py  conversations.py  files.py  knowledge_bases.py  runs.py  workflows.py
noxus_sdk/workflows/: __init__.py  agentflow.py  test_models.py  workflow.py
spot/: client.py  models.py
spotsdk/: client.py  models.py
tests/: conftest.py  test_agents.py  test_conversation.py  test_kbs.py  test_workflow_builder.py
